--- a/Workflow/Views/Shared/_Layout.cshtml
+++ b/Workflow/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Application" asp-action="Index">Manualworkflow</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Workflow" asp-action="StartWorkflow">WorkflowCore</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Workflow" asp-action="Index">WorkflowCore</a>
                         </li>
                     </ul>
                 </div>
